# chaitinschool.org

./: .gitignore  LICENSE  Makefile  README.md  chaitinschool.org.conf  deploy.sh  main.py  manage.py  pyproject.toml  requirements.in  requirements.txt  uwsgi.example.ini  uwsgi.ini
.github/workflows/: check.yml  deploy.yml
ansible/: .envrc.example  chaitin.service.j2  chaitinschool.caddy.j2  chaitinschool.service.j2  inventory.yaml  playbook.yaml
chaitin/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  denylist.py  forms.py  mixins.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_alter_attendance_options.py  0002_post.py  0003_alter_attendance_options.py  0003_workshop.py  0004_mentorship.py  0004_workshop_transpired_at.py  0005_post_author.py  0005_submission.py  0006_auto_20211028_0116.py  0006_image.py  0007_mentorship_is_available.py  0007_request.py  0008_auto_20211028_0139.py  0008_delete_feedback.py  0009_post_byline.py  0009_workshop_is_confirmed.py  0010_alter_workshop_is_confirmed.py  0010_rename_request_proposal.py  0011_auto_20211116_2243.py  0011_incident.py  0012_alter_workshop_transpired_at.py  0012_incident_published_at.py  0013_emailrecord.py  0013_remove_user_avatar_data_remove_user_avatar_ext_and_more.py  0014_remove_user_full_name.py  0014_rename_transpired_at_workshop_scheduled_at.py  0015_alter_workshop_scheduled_at.py  0015_remove_user_about_user_plan.py  0016_rename_location_workshop_location_name.py  0017_workshop_location_address.py  0018_feedback.py  0020_attendance.py  (+4 more)
(+50 files in other folders)
