[project]
name = "chaitinschool"
version = "0.1.0"
description = "chaitin school website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.1.0",
    "bleach>=6.3.0",
    "django>=6.0",
    "gunicorn>=23.0.0",
    "mistune>=3.1.4",
]

[dependency-groups]
dev = [
    "djade>=1.7.0",
    "ruff>=0.14.9",
]
